Closed Bug 367672 Opened 18 years ago Closed 18 years ago

CSS 2 system color InfoBackground doesn't work properly on mac

Categories

(Core :: Widget: Cocoa, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: stefanh, Assigned: stefanh)

References

()

Details

Attachments

(2 files)

InfoBackground seems to return white on mac instead of the yellow tooltip background-color. I can't really find any substantial documentation of the constant we're using in nsLookAndFeel.mm, so I'm not sure about what it's suppose to return. But since the fallback color isn't used, I assume kThemeBrushNotificationWindowBackground is returning white.
Attached file Testcase
I don't have any other idea than hard-coding the color value. We don't use any color constant in the native theme code either (see bug 351108 where I changed the tooltip bgcolor) so I guess this is the way to go.
Assignee: joshmoz → stefanh
Status: NEW → ASSIGNED
Attachment #252235 - Flags: review?(joshmoz)
CC:ing Mano and Robert Strong since "InfoBackground" is used in two Pinstripe files (Rob seems to have touched one file for a while ago):
toolkit/themes/pinstripe/mozapps/extensions/update.css
toolkit/themes/pinstripe/mozapps/update/updates.css

Do you guys want a tooltip background here?

JFTR: I do see a similar problem with SM GTK1 builds: the testcase here has background colour grey, while tooltips are yellow...
Comment on attachment 252235 [details] [diff] [review]
Use hard-coded color FFFFC7

fine with me
Attachment #252235 - Flags: review?(joshmoz) → review+
(In reply to comment #3)
> ...
> Do you guys want a tooltip background here?
Barring the OS providing an appropriate color I believe this is the way to go.
Attachment #252235 - Flags: superreview?(mikepinkerton)
Comment on attachment 252235 [details] [diff] [review]
Use hard-coded color FFFFC7

sr=pink, just make sure nobody else is using this and not expecting yellow.
Attachment #252235 - Flags: superreview?(mikepinkerton) → superreview+
JFTR: xforms.css uses InfoBackground for ephermal messages. I'm sure the intention is to have the same background as a tooltip here. So, the patch will improve  the look of those "tooltip-like" messages.
Comment on attachment 252235 [details] [diff] [review]
Use hard-coded color FFFFC7

Landed on trunk.
Fixed (thanks for the check-in!)
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9alpha
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: