Bug 367672: CSS 2 InfoBackground doesn't work properly; p=<stefanh@bluebottle.com>, r=joshmoz, sr=mikepinkerton